--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gallery</title>
+  <link rel="stylesheet" href="assets/style.css">
+ 
 </head>
 <body>
   <main>
@@ -17,5 +19,6 @@
   <button onklick="nextImg()" id="nextBtn" class="btn">Вперед</button>
     </div>
     </main>
+    <script src="assets/script.js"></script>
 </body>
 </html>
