--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <img src="https://cdn.iportal.ru/news/2020/99/preview/e7ae0a9644634d1bc5a7c4227c92b0fa04338999_712_475_c.png" alt="cat-mem" id="firstCat" />
   </div>
   <div class="btns">
-  <button onklick="backImg()" id="backBtn" class="btn">Назад</button>
-  <button onklick="nextImg()" id="nextBtn" class="btn">Вперед</button>
+  <button onсlick="backImg()" id="backBtn" class="btn">Назад</button>
+  <button onсlick="nextImg()" id="nextBtn" class="btn">Вперед</button>
     </div>
     </main>
     <script src="assets/script.js"></script>
