--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
         />
       </div>
       <div class="btns">
-        <button onсlick="backImg()" id="backButton" class="btn btn-left">
-          Назад
-        </button>
-        <button onсlick="nextImg()" id="nextButton" class="btn btn-right">
-          Вперед
+        <button
+          onсlick="calculateTotalPrice()"
+          id="knowBtn"
+          class="btn btn-one"
+        >
+          Узнать стоимость
         </button>
       </div>
     </main>
