--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         />
       </div>
       <div class="btns">
-        <button onсlick="backImg()" id="backBtn" class="btn btn-left">
+        <button onclick="backImg()" id="backBtn" class="btn btn-left">
           Назад
         </button>
-        <button onсlick="nextImg()" id="nextBtn" class="btn btn-right">
+        <button onclick="nextImg()" id="nextBtn" class="btn btn-right">
           Вперед
         </button>
       </div>
