--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,7 @@
       </div>
       <div class="btns">
         <button
-          onсlick="calculateTotalPrice()"
+          onclick="calculateTotalPrice()"
           id="knowBtn"
           class="btn btn-one"
         >
